--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,6 @@
     <title>Charlotte House :: Venue Hire</title>
   </head>
   <body>
-    <h1>Hello World</h1>
+    <h1>Hola Mundo!!</h1>
   </body>
 </html>
