--- a/app/index.html
+++ b/app/index.html
@@ -5,8 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Charlotte House::Venue Hire</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,300;0,400;0,700;0,900;1,400&display=swap" rel="stylesheet" />
   </head>
   <body>
-    <h1>Hola Mundo!!</h1>
+    <h1>Hola Mundo</h1>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Natus maxime asperiores debitis fugit ex, saepe rem sunt facilis molestiae dignissimos numquam cupiditate dicta culpa sapiente sed sequi, itaque commodi provident.</p>
   </body>
 </html>
