Header section built and minor style ajustments

--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,300;0,400;0,700;0,900;1,400&display=swap" rel="stylesheet" />
   </head>
   <body>
-    <h1>Hola Mundo</h1>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Natus maxime asperiores debitis fugit ex, saepe rem sunt facilis molestiae dignissimos numquam cupiditate dicta culpa sapiente sed sequi, itaque commodi provident.</p>
+    <header>
+      <div class="hero--content">
+        <h1 class="hero--title"><span class="hero--title-accent">Charlotte</span> House</h1>
+        <p class="hero--subtitle">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+        <button class="hero--btn" type="button">book now</button>
+      </div>
+      <img src="https://images.unsplash.com/photo-1562851529-482d8189f5a5?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=1440&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ" alt="" />
+    </header>
   </body>
 </html>
