--- a/app/index.html
+++ b/app/index.html
@@ -10,13 +10,59 @@
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,300;0,400;0,700;0,900;1,400&display=swap" rel="stylesheet" />
   </head>
   <body>
+    <nav class="main-nav">
+      <img src="img/logo.png" alt="Logo" class="nav__logo" id="logo" />
+      <ul class="main-nav-list">
+        <li><a class="main-nav-link" href="#">About</a></li>
+        <li><a class="main-nav-link" href="#">Map</a></li>
+        <li><a class="main-nav-link" href="#">Gallery</a></li>
+        <li><a class="main-nav-link" href="#">Contact</a></li>
+        <li><a class="main-nav-link nav-cta btn btn--purple btn--small" href="#">Book now</a></li>
+      </ul>
+    </nav>
     <header>
       <div class="hero--content">
         <h1 class="hero--title"><span class="hero--title-accent">Charlotte</span> House</h1>
         <p class="hero--subtitle">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
-        <button class="hero--btn" type="button">book now</button>
+        <button class="btn btn--purple" type="button">book now</button>
       </div>
       <img src="https://images.unsplash.com/photo-1562851529-482d8189f5a5?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=1440&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ" alt="" />
     </header>
+    <main>
+      <section class="section section-features" id="section-1">
+        <div class="container">
+          <div class="feature-container">
+            <figure class="feature">
+              <img class="feature-image" src="https://images.unsplash.com/photo-1562851529-482d8189f5a5?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=1440&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ" alt="img 1" />
+              <figcaption class="feature-body">
+                <h3 class="feature-title">Parties & Events</h3>
+              </figcaption>
+            </figure>
+
+            <figure class="feature">
+              <img class="feature-image" src="https://images.unsplash.com/photo-1562851529-482d8189f5a5?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=1440&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ" alt="img 1" />
+              <figcaption class="feature-body">
+                <h3 class="feature-title">Seminars & Workshops</h3>
+              </figcaption>
+            </figure>
+
+            <figure class="feature">
+              <img class="feature-image" src="https://images.unsplash.com/photo-1562851529-482d8189f5a5?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=1440&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ" alt="img 1" />
+              <figcaption class="feature-body">
+                <h3 class="feature-title">Live Music & Shows</h3>
+              </figcaption>
+            </figure>
+          </div>
+        </div>
+      </section>
+      <section class="section-map" id="section-2">
+        <div class="container">
+          <div id="map">
+            <img class="map-image" src="/assets/images/map-placeholder.png" alt="map" />
+            <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3106.7321234187393!2d153.02622788117645!3d-27.470636470118972!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b915a1b6a0cc96d%3A0x1fa21091aad930ca!2s139%20Charlotte%20St%2C%20Brisbane%20City%20QLD%204000!5e0!3m2!1sen!2sau!4v1659160062703!5m2!1sen!2sau" width="100%" height="450" style="border: 0" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> -->
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
