--- a/app/index.html
+++ b/app/index.html
@@ -9,25 +9,26 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,300;0,400;0,700;0,900;1,400&display=swap" rel="stylesheet" />
     <!-- <link type="text/css" rel="stylesheet" href="https://cdn.jsdelivr.net/npm/lightgallery@2.5.0/css/lightgallery-bundle.css" /> -->
+    
   </head>
-  <body>
-    <section class="navWrap">
+  <body id="home">
+    <section class="navWrap" >
       <img src="assets/images/placeholder-logo.svg" alt="Logo" class="logo" />
       <input type="checkbox" id="navToggle" class="navToggle" />
       <label for="navToggle" class="navToggleLabel"><span></span></label>
       <nav class="nav">
         <ul class="nav__links">
           <li class="nav__item"><a class="nav__link" href="#home">Home</a></li>
-          <li class="nav__item"><a class="nav__link" href="#team">About</a></li>
-          <li class="nav__item"><a class="nav__link" href="#gallery">Gallery</a></li>
-          <li class="nav__item"><a class="nav__link" href="#problem">Map</a></li>
-          <li class="nav__item"><a class="nav__link" href="#contact">Contact</a></li>
+          <li class="nav__item"><a class="nav__link" href="#section-1">About</a></li>
+          <li class="nav__item"><a class="nav__link" href="#section-2">Map</a></li>
+          <li class="nav__item"><a class="nav__link" href="#section-3">Gallery</a></li>
           <li class="nav__item"><a class="btn btn--purple btn--small" href="#trips">Book now</a></li>
         </ul>
       </nav>
-    </section>
+  </section>
 
-    <header>
+    <header class="header">
+      
       <div class="hero--content">
         <h1 class="hero--title"><span class="hero--title-accent">Charlotte</span> House</h1>
         <p class="hero--subtitle">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
@@ -64,6 +65,12 @@
       </section>
       <section class="section-map" id="section-2">
         <div class="container">
+          <div class="section__title">
+            <!-- <h3 class="section__description">Location</h3> -->
+            <h3 class="section__header">
+              Located in the heart of Brisbane's CBD.
+            </h3>
+          </div>
           <div id="map">
             <img class="map-image" src="/assets/images/map-placeholder.png" alt="map" />
             <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3106.7321234187393!2d153.02622788117645!3d-27.470636470118972!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b915a1b6a0cc96d%3A0x1fa21091aad930ca!2s139%20Charlotte%20St%2C%20Brisbane%20City%20QLD%204000!5e0!3m2!1sen!2sau!4v1659160062703!5m2!1sen!2sau" width="100%" height="450" style="border: 0" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> -->
@@ -98,6 +105,17 @@
           </div>
         </div>
       </section>
+      <section class="section section-cat mx-auto text-center" id="section-4">
+          <h2>Secure your booking today!</h2>
+          <button class="btn btn--purple mt-sm" type="button">book now</button>
+      </section>
+      <footer class="section section-footer ">
+        <address class="address-box">
+            <p>497 Charlotte St. Brisbane, QLD 4000</p>
+            <a href="tel:+44 345 678 903">+44 345 678 903</a><br>
+            <a href="maito:charlottehousebrisbane@gmail.com">charlottehousebrisbane@gmail.com</a>
+        </address>
+      </footer>
     </main>
   </body>
 </html>
