--- a/app/index.html
+++ b/app/index.html
@@ -22,7 +22,7 @@
           <li class="nav__item"><a class="nav__link" href="#section-1">About</a></li>
           <li class="nav__item"><a class="nav__link" href="#section-2">Map</a></li>
           <li class="nav__item"><a class="nav__link" href="#section-3">Gallery</a></li>
-          <li class="nav__item"><a class="btn btn--purple btn--small" href="#trips">Book now</a></li>
+          <li class="nav__item"><a class="btn btn--purple btn--small btn--show-modal" href="#trips">Book now</a></li>
         </ul>
       </nav>
   </section>
@@ -32,7 +32,7 @@
       <div class="hero--content">
         <h1 class="hero--title"><span class="hero--title-accent">Charlotte</span> House</h1>
         <p class="hero--subtitle">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
-        <button class="btn btn--purple" type="button">book now</button>
+        <button class="btn btn--purple btn--show-modal" type="button">book now</button>
       </div>
       <img src="https://images.unsplash.com/photo-1562851529-482d8189f5a5?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=1440&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ" alt="" />
     </header>
@@ -107,13 +107,13 @@
       </section>
       <section class="section section-cat mx-auto text-center" id="section-4">
           <h2>Secure your booking today!</h2>
-          <button class="btn btn--purple mt-sm" type="button">book now</button>
+          <button class="btn btn--purple mt-sm btn--show-modal" type="button">book now</button>
       </section>
       <footer class="section section-footer ">
         <address class="address-box">
             <p>497 Charlotte St. Brisbane, QLD 4000</p>
-            <a href="tel:+44 345 678 903">+44 345 678 903</a><br>
-            <a href="maito:charlottehousebrisbane@gmail.com">charlottehousebrisbane@gmail.com</a>
+            <a href="maito:charlottehousebrisbane@gmail.com">charlottehousebrisbane@gmail.com</a><br>
+            <a href="tel:+44 345 678 903">+44 345 678 903</a>
         </address>
       </footer>
     </main>
