--- a/app/index.html
+++ b/app/index.html
@@ -12,20 +12,22 @@
     
   </head>
   <body id="home">
-    <section class="navWrap" >
-      <img src="assets/images/placeholder-logo.svg" alt="Logo" class="logo" />
-      <input type="checkbox" id="navToggle" class="navToggle" />
-      <label for="navToggle" class="navToggleLabel"><span></span></label>
-      <nav class="nav">
-        <ul class="nav__links">
-          <li class="nav__item"><a class="nav__link" href="#home">Home</a></li>
-          <li class="nav__item"><a class="nav__link" href="#section-1">About</a></li>
-          <li class="nav__item"><a class="nav__link" href="#section-2">Map</a></li>
-          <li class="nav__item"><a class="nav__link" href="#section-3">Gallery</a></li>
-          <li class="nav__item"><a class="btn btn--purple btn--small btn--show-modal" href="#trips">Book now</a></li>
-        </ul>
-      </nav>
-  </section>
+
+        <section class="navWrap" >
+          <img src="assets/images/placeholder-logo.svg" alt="Logo" class="logo" />
+          <input type="checkbox" id="navToggle" class="navToggle" />
+          <label for="navToggle" class="navToggleLabel"><span></span></label>
+          <nav class="nav">
+            <ul class="nav__links">
+              <li class="nav__item"><a class="nav__link" href="#home">Home</a></li>
+              <li class="nav__item"><a class="nav__link" href="#section-1">About</a></li>
+              <li class="nav__item"><a class="nav__link" href="#section-2">Map</a></li>
+              <li class="nav__item"><a class="nav__link" href="#section-3">Gallery</a></li>
+              <li class="nav__item"><a class="btn btn--purple btn--small btn--show-modal" href="#trips">Book now</a></li>
+            </ul>
+          </nav>
+          </section>
+
 
     <header class="header">
       
@@ -34,28 +36,28 @@
         <p class="hero--subtitle">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
         <button class="btn btn--purple btn--show-modal" type="button">book now</button>
       </div>
-      <img src="https://images.unsplash.com/photo-1562851529-482d8189f5a5?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=1440&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ" alt="" />
+      <img src="assets/images/Charlotte_House--2000w.jpg" alt="Charlotte House Building" />
     </header>
     <main>
       <section class="section section-features" id="section-1">
         <div class="container">
           <div class="feature-container">
             <figure class="feature">
-              <img class="feature-image" src="assets/images/hero--smaller-i.jpg" alt="img 1" />
+              <img class="feature-image" src="assets/images/parties-events--800w.jpg" alt="Parties and Events" />
               <figcaption class="feature-body">
                 <h3 class="feature-title">Parties & Events</h3>
               </figcaption>
             </figure>
 
             <figure class="feature">
-              <img class="feature-image" src="assets/images/hero--smaller-i.jpg" alt="img 1" />
+              <img class="feature-image" src="assets/images/seminars-workshops--800w.jpg" alt="Seminars and Workshops" />
               <figcaption class="feature-body">
                 <h3 class="feature-title">Seminars & Workshops</h3>
               </figcaption>
             </figure>
 
             <figure class="feature">
-              <img class="feature-image" src="assets/images/hero--smaller-i.jpg" alt="img 1" />
+              <img class="feature-image" src="assets/images/live-music--800w.jpg" alt="Live Music and Shows" />
               <figcaption class="feature-body">
                 <h3 class="feature-title">Live Music & Shows</h3>
               </figcaption>
@@ -73,7 +75,7 @@
           </div>
           <div id="map">
             <img class="map-image" src="/assets/images/map-placeholder.png" alt="map" />
-            <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3106.7321234187393!2d153.02622788117645!3d-27.470636470118972!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b915a1b6a0cc96d%3A0x1fa21091aad930ca!2s139%20Charlotte%20St%2C%20Brisbane%20City%20QLD%204000!5e0!3m2!1sen!2sau!4v1659160062703!5m2!1sen!2sau" width="100%" height="450" style="border: 0" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> -->
+            <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3106.7321234187393!2d153.02622788117645!3d-27.470636470118972!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b915a1b6a0cc96d%3A0x1fa21091aad930ca!2s139%20Charlotte%20St%2C%20Brisbane%20City%20QLD%204000!5e0!3m2!1sen!2sau!4v1659160062703!5m2!1sen!2sau" width="100%" height="500" style="border: 0" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> -->
           </div>
         </div>
       </section>
