CTA Heading updated

--- a/app/index.html
+++ b/app/index.html
@@ -108,7 +108,7 @@
         </div>
       </section>
       <section class="section section-cat mx-auto text-center" id="section-4">
-          <h2>Secure your booking today!</h2>
+          <h2>Secure your booking today.</h2>
           <button class="btn btn--purple mt-sm btn--show-modal" type="button">book now</button>
       </section>
       <footer class="section section-footer ">
