Changed header subtitle

--- a/app/index.html
+++ b/app/index.html
@@ -33,7 +33,7 @@
       
       <div class="hero--content">
         <h1 class="hero--title"><span class="hero--title-accent">Charlotte</span> House</h1>
-        <p class="hero--subtitle">Lorem ipsum dolor, sit amet consectetur adipisicing.</p>
+        <p class="hero--subtitle">Premium events venue in the heart of Brisbane </p>
         <button class="btn btn--purple btn--show-modal" type="button">book now</button>
       </div>
       <img src="assets/images/Charlotte_House--2000w.jpg" alt="Charlotte House Building" />
