Fixed scrolling nav indicator bug

--- a/app/index.html
+++ b/app/index.html
@@ -11,7 +11,7 @@
     <link type="text/css" rel="stylesheet" href="https://cdn.jsdelivr.net/npm/lightgallery@2.5.0/css/lightgallery-bundle.css" />
     
   </head>
-  <body id="home">
+  <body id="home" data-matching-link="#home-link">
 
         <section class="navWrap" >
           <img src="assets/images/placeholder-logo--white.svg" alt="Logo" class="logo" />
@@ -65,12 +65,12 @@
           </div>
         </div>
       </section>
-      <section class="section-map" id="section-2" data-matching-link="#location-link">
+      <section class="section section-map" id="section-2" data-matching-link="#location-link">
         <div class="container">
           <div class="section__title">
-            <h3 class="section__header">
-              Located in the heart of Brisbane's CBD.
-            </h3>
+            <h2 class="section__header">
+              Located in Brisbane's CBD.
+            </h2>
           </div>
           <div id="map">
             <!-- <img class="map-image" src="/assets/images/map-placeholder.png" alt="map" /> -->
@@ -107,7 +107,7 @@
         </div>
       </section>
       <section class="section section-cat mx-auto text-center" id="section-4">
-          <h2>Secure your booking today.</h2>
+          <h2 class="section__header">Secure your booking today.</h2>
           <button class="btn btn--purple mt-sm btn--show-modal" type="button">book now</button>
       </section>
       <footer class="section section-footer ">
