Implemented image lazy loading

--- a/app/index.html
+++ b/app/index.html
@@ -32,6 +32,7 @@
     <header class="header">
       
       <div class="hero--content">
+        <!-- <img class="hero--logo" src="assets/images/CharlotteHouse-logo--black.svg" alt="Logo"> -->
         <h1 class="hero--title"><span class="hero--title-accent">Charlotte</span> House</h1>
         <p class="hero--subtitle">Premium events venue in the heart of Brisbane </p>
         <button class="btn btn--purple btn--show-modal" type="button">book now</button>
@@ -43,21 +44,30 @@
         <div class="container">
           <div class="feature-container">
             <figure class="feature">
-              <img class="feature-image" src="assets/images/parties-events--800w.jpg" alt="Parties and Events" />
+              <img class="feature-image lazy-img" 
+              src="assets/images/parties-events--800w-lazy.jpg" 
+              data-src="assets/images/parties-events--800w.jpg"
+              alt="Parties and Events" />
               <figcaption class="feature-body">
                 <h3 class="feature-title">Parties & Events</h3>
               </figcaption>
             </figure>
 
             <figure class="feature">
-              <img class="feature-image" src="assets/images/seminars-workshops--800w.jpg" alt="Seminars and Workshops" />
+              <img class="feature-image lazy-img" 
+              src="assets/images/seminars-workshops--800w-lazy.jpg" 
+              data-src="assets/images/seminars-workshops--800w.jpg"
+              alt="Seminars and Workshops" />
               <figcaption class="feature-body">
                 <h3 class="feature-title">Seminars & Workshops</h3>
               </figcaption>
             </figure>
 
             <figure class="feature">
-              <img class="feature-image" src="assets/images/live-music--800w.jpg" alt="Live Music and Shows" />
+              <img class="feature-image lazy-img" 
+              src="assets/images/live-music--800w-lazy.jpg" 
+              data-src="assets/images/live-music--800w.jpg"
+              alt="Live Music and Shows" />
               <figcaption class="feature-body">
                 <h3 class="feature-title">Live Music & Shows</h3>
               </figcaption>
