implemented reveal on scroll for some sections

--- a/app/index.html
+++ b/app/index.html
@@ -75,7 +75,7 @@
           </div>
         </div>
       </section>
-      <section class="section section-map" id="section-2" data-matching-link="#location-link">
+      <section class="section section-map reveal" id="section-2" data-matching-link="#location-link">
         <div class="container">
           <div class="section__title">
             <h2 class="section__header">
@@ -88,7 +88,7 @@
           </div>
         </div>
       </section>
-      <section class="section section-gallery" id="section-3" data-matching-link="#gallery-link">
+      <section class="section section-gallery reveal" id="section-3" data-matching-link="#gallery-link">
         <div class="container ">
           <div id="lightgallery" class="gallery-container mx-auto">
             <a class="img-box" href="assets/images/hero--small-i.jpg" data-lg-size="990-654">
@@ -116,7 +116,7 @@
           </div>
         </div>
       </section>
-      <section class="section section-cat mx-auto text-center" id="section-4">
+      <section class="section section-cat mx-auto text-center reveal" id="section-4">
           <h2 class="section__header">Secure your booking today.</h2>
           <button class="btn btn--purple mt-sm btn--show-modal" type="button">book now</button>
       </section>
